// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectPermits renders correctly with sampling conducted false 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-9"
  >
    <div
      class="MuiBox-root MuiBox-root-10"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        Permits
      </h3>
      <button
        aria-label="Add Permit"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        title="Add Permit"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Permit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiTableContainer-root"
    >
      <table
        aria-label="permits-list-table"
        class="MuiTable-root makeStyles-table-6"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head makeStyles-heading-7"
              scope="col"
            >
              Permit Number
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head makeStyles-heading-7"
              scope="col"
            >
              Sampling Conducted
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              123
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              No
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body makeStyles-tableCellBorderTop-8 MuiTableCell-alignRight"
            >
              <button
                aria-label="Edit Permit"
                class="MuiButtonBase-root MuiButton-root MuiButton-text editButtonSmall"
                tabindex="0"
                title="Edit Permit"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  EDIT
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectPermits renders correctly with sampling conducted true 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-4"
  >
    <div
      class="MuiBox-root MuiBox-root-5"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        Permits
      </h3>
      <button
        aria-label="Add Permit"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        title="Add Permit"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Permit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiTableContainer-root"
    >
      <table
        aria-label="permits-list-table"
        class="MuiTable-root makeStyles-table-1"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head makeStyles-heading-2"
              scope="col"
            >
              Permit Number
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head makeStyles-heading-2"
              scope="col"
            >
              Sampling Conducted
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              123
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              Yes
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body makeStyles-tableCellBorderTop-3 MuiTableCell-alignRight"
            >
              <button
                aria-label="Edit Permit"
                class="MuiButtonBase-root MuiButton-root MuiButton-text editButtonSmall"
                tabindex="0"
                title="Edit Permit"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  EDIT
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
